poppr 1.0.3
===========
IMPROVEMENTS
* Optimized internal sampling function to run up to 2x faster. 

NEW FEATURES
* Function `informloci` will remove phylogenetically uninformative loci.

NAMESPACE
* Now importing specific functions from igraph and ape due to dependency issues.
* Removed igraph, ape, ggplot2, and phangorn form "Dependencies", but keeping them in "Imports".

BUG FIXES
* `read.genalex` will no longer insert an "X" in front of loci with numeric names. 

poppr 1.0.2
===========
BUG FIXES
* Fixed bug in diss.dist function that would return an inflated distance for haploids.

DOCUMENTATION
* Added explaination for the index of association in poppr_manual.
* Expanded installation section to include installation instructions from github.

MISC
* internal permutation algorithm no longer lists permutations in reverse order

poppr 1.0.1
===========
IMPROVEMENTS
* Rlgorithm for the index of association was updated to increase speed.

BUG FIXES
* Removed unnecessary rounding factor for missing data in `bruvo.dist`.
* Corrected handling of duplicate entries for `read.genind`.
* Input values that are not multiples of the specified repeat length for Bruvo's distance are now rounded (as opposed to being forced as integers).

MISC
* Vignette updated for aesthetics and to reflect algorithmic changes.

poppr 1.0.0
===========
MISC
* Poppr has been confirmed to work on Linux, Mac, and Windows systems with R 3.0.0.
* Vignette `poppr_manual` now has cross-references to different sections.
* Vignette `poppr_manual` is quicker loading. 

BUG FIXES
* removed alpha channel from plot for resampled values of I_A and \bar{r}_d due to warnings.

poppr 0.4.1
===========
NEW FEATURES
* `getfile` has a new argument, "combine", which will automatically add the path to the list of files, so they can be read without switching working directory.
* information printed to screen from `missingno` and `mlg.crosspop` will now be wrapped to 80 characters.

BUG FIXES