@@ -3,7 +3,7 @@ Type: Package
 Title: an R package for genetic analysis of populations with mixed
     reproduction
 Version: 1.0.3
-Date: 2013-08-12
+Date: 2013-08-21
 Author: Zhian N. Kamvar <kamvarz@science.oregonstate.edu>, Javier F. Tabima
     <tabimaj@onid.orst.edu>, Niklaus J. Grunwald
     <grunwaln@science.oregonstate.edu>
